--- a/camera_raw_chapter_6_1.ipynb
+++ b/camera_raw_chapter_6_1.ipynb
@@ -59,9 +59,9 @@
         "\n",
         "この節では以前の章で取り上げた線形補間デモザイクの特徴について調べて次の章の準備とします。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。 詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_6\\_1](http://bit.ly/raw_chap_6_1)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -95,7 +95,7 @@
         "!apt -y install fonts-ipafont-gothic\n",
         "plt.rcParams['font.family'] = 'IPAPGothic'"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,134 +126,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "metadata": {
-        "colab_type": "text",
-        "id": "H_hL7Kxhzs8c"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### ベイヤー画像の周波数特性\n",
-        "\n",
-        "_この節は、画像処理の理論的背景に興味がない方は読み飛ばして構いません。_\n",
-        "\n",
-        "それではまず、前回のデモザイク処理の問題点を分析してみましょう。\n",
-        "\n",
-        "前回の記事の最後で、線形補間処理をFIRフィルターとして書き換える作業を行いました。これは処理の高速化を念頭においたものですが、FIRを使った画像処理として解釈することもできます。\n",
-        "\n",
-        "まず、ベイヤー配列のある特定の色の画素は、もともとのフル解像度の画像に、位置によって0または１を取るサンプリング関数を画像にかけたものと解釈する事ができます。\n",
-        "\n",
-        "![ベイヤー配列上の緑画素](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig6_1_1.png)\n",
-        "\n",
-        "これを数式で表すとこうなります。\n",
-        "\n",
-        "$$ \\displaystyle f_G(x, y) = f(x, y) \\cdotp s(x, y) $$\n",
-        "\n",
-        "$$ \\displaystyle \n",
-        "s(x, y) = \n",
-        "\\begin{cases}\n",
-        "0   \\text{  if } x \\mod 2 = y \\mod 2 \\\\\\\n",
-        "1  \\text{  otherwise}\n",
-        "\\end{cases}\n",
-        "$$\n",
-        "\n",
-        "$ s(x, y) $はさらに\n",
-        "\n",
-        "\\begin{eqnarray}\n",
-        "s \\left ( x, y \\right )  =  \\frac{1}{2} \\left ( 1 - \\left ( -1 \\right ) ^ {x + y} \\right ) \\\\\n",
-        " = \\frac{1}{2} \\left ( 1 - e ^ {i \\pi \\left ( x + y \\right ) } \\right )\n",
-        "\\end{eqnarray}\n",
-        "\n",
-        "とかけます。\n",
-        "たとえば$ x $と$ y $の和が偶数だと\n",
-        "\n",
-        "$$ e ^ {i \\pi \\left ( x + y \\right )} = 1 $$\n",
-        "\n",
-        "になり、奇数だと\n",
-        "\n",
-        "$$ e ^ {i \\pi \\left ( x + y \\right )} = -1 $$\n",
-        "\n",
-        "になることを利用しています。\n",
-        "\n",
-        "したがって、元の式は\n",
-        "\n",
-        "\\begin{eqnarray}\n",
-        "f_{G} \\left ( x, y \\right ) =  \\frac{1}{2} f_{full}\\left ( 1 - \\left ( -1 \\right ) ^ {x + y} \\right ) \\\\\n",
-        "= \\frac{1}{2} \\left ( f_{full} - f_{full} e ^ {i \\pi \\left ( x + y \\right ) } \\right )\n",
-        "\\end{eqnarray}\n",
-        "\n",
-        "と表されます。この式の後半は、元の関数をx軸方向とy軸方向に $\\pi$ ずつずらし、元の信号から引く事を意味します。"
-      ]
-    },
-    {
-      "metadata": {
-        "colab_type": "text",
-        "id": "dB_s7UsBzs8d"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "さて、この画像をフーリエ変換して周波数特性を求めたらどのようになるでしょうか？$ f_G $ をフーリエ変換したものを$ F_G $とすると、\n",
-        "\n",
-        "\\begin{eqnarray}\n",
-        "F_G \\left( w, v \\right ) &=& \\int f_G \\left ( x, y \\right) e ^ {i w} e ^ {i v} dx dy \\\\\n",
-        "&=& \\int \\frac{1}{2} \\left (\n",
-        "    f \\left( x, y \\right) - f \\left( x, y \\right ) e ^ {\\pi i \\left( x + y \\right) } \n",
-        "    \\right ) e ^ {i w} e ^ {i v} dx dy\n",
-        "\\end{eqnarray}\n",
-        "\n",
-        "ここで元の $f \\left( x, y \\right)$ をフーリエ変換したものを $F(w, v)$ とすると、\n",
-        "\n",
-        "$$\n",
-        "F\\left( w, v \\right) = \\int f \\left( x, y  \\right )  e ^ {i w x} e ^ {i v y} dx dy\n",
-        "$$\n",
-        "\n",
-        "なので、\n",
-        "\n",
-        "\\begin{eqnarray}\n",
-        "F_G \\left( w, v \\right ) \n",
-        "&=& \\frac{1}{2} F \\left( x, y \\right) - \\frac{1}{2} \\int f \\left( x, y \\right ) e ^ {\\pi i \\left( x + y \\right) } \n",
-        "    e ^ {i w} e ^ {i v} dx dy\n",
-        "\\end{eqnarray}\n",
-        "\n",
-        "ここで、\n",
-        "\n",
-        "\\begin{eqnarray}\n",
-        "\\int f \\left( x, y \\right ) e ^ {\\pi i \\left( x + y \\right) } e ^ {i w} e ^ {i v} dx dy\n",
-        "&=& \\int f \\left( x, y \\right ) e ^ {i \\left( w + \\pi \\right ) x } e ^ {i \\left( v + \\pi \\right) y} dx dy \\\\\n",
-        "&=& F\\left(w + \\pi, v + \\pi \\right) \n",
-        "\\end{eqnarray}\n",
-        "\n",
-        "を利用すると\n",
-        "\n",
-        "$$\n",
-        "F_G \\left( w, v \\right ) = \\frac{1}{2} F\\left( x, y \\right) - \\frac{1}{2} F\\left( x + \\pi, y + \\pi\\right)\n",
-        "$$\n",
-        "\n",
-        "となります。\n",
-        "\n",
-        "これは$\\frac{1}{2}$の係数をのぞけば、元の画像の周波数特性を周波数軸上に $\\pi$ だけずらすしてもとの画像から引いたものです。"
-      ]
-    },
-    {
-      "metadata": {
-        "colab_type": "text",
-        "id": "FeIM44j1zs8d"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "つまり、もし元の画像の周波数特性が模式的にこのように表されるとしたら、\n",
-        "\n",
-        "![元画像の周波数特性の模式図](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig6_1_2.png)\n",
-        "\n",
-        "Bayer上の緑画素の周波数特性はこのようになります。\n",
-        "\n",
-        "![エイリアスを起こした画像の周波数特性](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig6_1_3.png)\n",
-        "\n",
-        "青い部分が、全式の後半部分にできたもので元の画像の一部を定間隔でとりだした（サブサンプリング）したためにできた副生成物（アーティファクト）です。このような副生成物をエイリアシングとよびます[^1]。\n",
-        "\n",
-        "[^1]: 通常の画像で拡大縮小などによってエイリアシングがおきると、高周波成分が低い周波数に干渉してモアレなどを生成することがしられています。"
-      ]
     },
     {
       "metadata": {
@@ -330,7 +202,7 @@
         "plt.title(\"緑画素用線形補間フィルターの周波数特性\")\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,27 +237,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### 赤・青画素の周波数特性とフィルター\n",
-        "\n",
-        "同様に赤画素のサンプリング関数は、xとyがどちらも偶数のときのみ値が存在することを考えると、\n",
-        "\n",
-        "\\begin{equation}\n",
-        "s_R \\left ( x, y \\right ) =  \\frac{1}{4} \\left ( 1 - \\left ( -1 \\right ) ^ x \\right ) \\left ( 1 - \\left ( -1 \\right ) ^ y \\right ) \n",
-        "=  \\frac{1}{4} \\left ( 1 - e ^ {i \\pi x} \\right ) \\left ( 1 - e ^ {i \\pi y} \\right )  \n",
-        "\\end{equation}\n",
-        "\n",
-        "で、青画素は、\n",
-        "\n",
-        "\\begin{equation}\n",
-        "s_B \\left ( x, y \\right ) =  \\frac{1}{4} \\left ( 1 + \\left ( -1 \\right ) ^ x \\right ) \\left ( 1 + \\left ( -1 \\right ) ^ y \\right ) \n",
-        "=  \\frac{1}{4} \\left ( 1 + e ^ {i \\pi x} \\right ) \\left ( 1 + e ^ {i \\pi y} \\right )  \n",
-        "\\end{equation}\n",
-        "\n",
-        "符号を無視すると周波数特性はどちらも同じになり、エイリアシングの様子はこうなります。\n",
-        "\n",
-        "![ベイヤー内の赤・青画像の周波数特性](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig6_1_4.png)\n",
-        "\n",
-        "緑の画素にくらべて、エイリアシングの影響を受ける領域が大きくなっています。したがって、緑よりも強めのローパスフィルターをかける必要があることが予想されます。"
+        "### 赤・青画素の周波数特性とフィルター\n"
       ]
     },
     {
@@ -442,7 +294,7 @@
         "plt.title(\"赤・青画素用線形補間フィルターの周波数特性\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
