--- a/camera_raw_chapter_6_2.ipynb
+++ b/camera_raw_chapter_6_2.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "この節では線形補間デモザイクよりも高度なデモザイクアルゴリズムをとりあげます。なお、この節の内容の大部分は論文\"Frequency-Domain Methods for Demosaicking of Bayer-Sampled Color Images, Eric Dubois, IEEE Signal Processing Letters, Dec. 2005\"に基づいています。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。 詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_6\\_2](http://bit.ly/raw_chap_6_2)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -104,7 +104,7 @@
         "raw_array = raw.raw_image\n",
         "h, w = raw_array.shape"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,125 +151,7 @@
       "source": [
         "### より高度なデモザイク処理\n",
         "\n",
-        "_この項は、画像処理の理論的背景に興味がない方は読み飛ばして構いません。_\n",
-        "\n",
-        "線形補間デモザイクでは各色チャンネルをそれぞれ独立なものとして処理しました。ここでは、３色のBayer配列全体を一つの画像と見てみます。\n",
-        "\n",
-        "前節でもとめた各色チャンネルの表現をもちいると、Bayer画像はこのように表記できます。\n",
-        "\n",
-        "\\begin{align}\n",
-        "f_{bayer} = & \\frac{1}{2} f_G \\left ( 1 - \\left ( -1 \\right ) ^ {x + y} \\right ) + \\\\\\\n",
-        "& \\frac{1}{2} f_R \\left ( 1 - \\left ( -1 \\right ) ^ {x} \\right ) \\left ( 1 - \\left ( -1 \\right ) ^ {y} \\right ) + \\\\\\\n",
-        "& \\frac{1}{2} f_B \\left ( 1 + \\left ( -1 \\right ) ^ {x} \\right ) \\left ( 1 + \\left ( -1 \\right ) ^ {y} \\right )\n",
-        "\\end{align}\n",
-        "\n",
-        "\n",
-        "ここで、\n",
-        "\\begin{equation}\n",
-        "\\left ( -1 \\right ) ^ {x} = e ^ {i \\pi x}\\\\\n",
-        "\\left ( -1 \\right ) ^ {y} = e ^ {i \\pi y}\\\\\n",
-        "\\left ( -1 \\right ) ^ {x + y} = e ^ {i \\pi \\left( x + y \\right)}\\\\\n",
-        "\\end{equation}\n",
-        "\n",
-        "\n",
-        "を利用して、\n",
-        "\n",
-        "\\begin{align}\n",
-        "f_{bayer} = & \\left ( \\frac{1}{4} f_B + \\frac{1}{2} f_G + \\frac{1}{4} f_R \\right ) + \\\\\\\n",
-        "& \\left ( \\frac{1}{4} f_B - \\frac{1}{2} f_G + \\frac{1}{4} f_R \\right ) \\cdot e^{i \\pi (x + y)} + \\\\\\\n",
-        "& \\left ( \\frac{1}{4} f_B - \\frac{1}{4} f_R \\right ) \\cdot (e^{i \\pi x} + e^{i \\pi y})\n",
-        "\\end{align}\n",
-        "\n",
-        "\n",
-        "まとめると\n",
-        "\n",
-        "\\begin{align}\n",
-        "f_{bayer} & = f_{L} - f_{C1} e^{i \\pi \\left ( x + y \\right ) } + f_{C2} \\left ( e^{i \\pi x} + e^{i \\pi y} \\right ) \\\\\\\n",
-        "f_L & = \\frac{1}{4} f_R + \\frac{1}{2} f_G + \\frac{1}{4} f_B \\\\\\\n",
-        "f_{C1} & = \\left ( \\frac{1}{4} f_B - \\frac{1}{2} f_G + \\frac{1}{4} f_R \\right ) \\\\\\\n",
-        "f_{C2} & = \\left ( \\frac{1}{4} f_B - \\frac{1}{4} f_R \\right ) \n",
-        "\\end{align}\n",
-        "\n",
-        "逆に、 $f_L$ 、 $f_{C1}$ 、 $f_{C2}$ から、 $f_R$ 、 $f_G$ 、 $f_B$ は、\n",
-        "\n",
-        "$$\n",
-        "\\begin{cases}\n",
-        "f_R = f_L + f_{C1} - 2f_{C2} \\\\\\\n",
-        "f_G = f_L - f_{C1} \\\\\\\n",
-        "f_B = f_L + f_{C1} - 2f_{C2} \n",
-        "\\end{cases}\n",
-        "$$\n",
-        "\n",
-        "と、求められます。"
-      ]
-    },
-    {
-      "metadata": {
-        "colab_type": "text",
-        "id": "TaWFFFAaypuf"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "では、 $f_L$ 、 $f_{C1}$ 、 $f_{C2}$ はどうやって計算すれば良いのか、というのが次の問題になります。\n",
-        "\n",
-        "$f_L$ 、 $f_{C1}$ 、 $f_{C2}$ の定義をみると、 $f_R$ 、 $f_G$ 、 $f_B$ の線形結合なので元の画像が周波数制限されていて低い周波数の成分しかもっていないとすると、 $f_L$ 、 $f_{C1}$ 、 $f_{C2}$ も周波数制限されていると考えられます。\n",
-        "\n",
-        "ここで前節のベイヤー画像の周波数特性の計算を思い出すと、 $f_{C1} e^{i \\pi (x + y)}$ や $f_{C2} \\left ( e^{i \\pi x} + e^{i \\pi y} \\right )$ は $f_{C1}$ 、 $f_{C2}$ を周波数空間で $\\pi$ だけシフトしたものです。\n",
-        "もとの$f_{Bayer}$はこれらを足し合わせたものなので、図に表すとこうなります。\n",
-        "\n",
-        "![ベイヤー画像の周波数特性の分解](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig6_2_1.png)\n",
-        "\n",
-        "ということは、 $_{Bayer}$ に帯域制限フィルターをかけて各成分をとりだして周波数をシフトすれば $f_L$ 、 $f_{C1}$ 、 $f_{C2}$ を得られるという事になります。\n",
-        "\n",
-        "必要なフィルターは4つです。\n",
-        "\n",
-        "- FC1 : 縦・横ハイパスフィルター。$ f_{C1} $を取り出すのに使います。\n",
-        "\n",
-        "例：\n",
-        "\\begin{equation}\n",
-        "F_{C1} = \n",
-        "\\left(\\begin{array}{c} -1 \\\\\\ 2 \\\\\\ -3 \\\\\\ 4 \\\\\\ -3 \\\\\\ 2 \\\\\\ -1\\end{array}\\right)\n",
-        "\\left(\\begin{array}{c} -1, 2, -3, 4, -3, 2, -1\\end{array}\\right)\n",
-        "\\end{equation}\n",
-        "\n",
-        "- FC2V : 縦方向ハイパスフィルター、横方向ローパスフィルター。$ f_{C2}$の上下の成分を取り出すのに使います。\n",
-        "\n",
-        "例：\n",
-        "\\begin{equation}\n",
-        "F_{C2V} = \n",
-        "\\left(\\begin{array}{c} -1 \\\\\\ 2 \\\\\\ -3 \\\\\\ 4 \\\\\\ -3 \\\\\\ 2 \\\\\\ -1\\end{array}\\right)\n",
-        "\\left(\\begin{array}{c} 1, 2, 3, 4, 3, 2, 1\\end{array}\\right)\n",
-        "\\end{equation}\n",
-        "\n",
-        "- FC2H: 縦方向ローパスフィルター、横方向ハイパスフィルター。$ f_{C2} $の左右の成分を取り出すのに使います。\n",
-        "\n",
-        "例：\n",
-        "\\begin{equation}\n",
-        "F_{C2H} = \n",
-        "\\left(\\begin{array}{c} 1 \\\\\\ 2 \\\\\\ 3 \\\\\\ 4 \\\\\\ 3 \\\\\\ 2 \\\\\\ 1\\end{array}\\right)\n",
-        "\\left(\\begin{array}{c} -1, 2, -3, 4, -3, 2, -1\\end{array}\\right)\n",
-        "\\end{equation}\n",
-        "\n",
-        "- FL: (FC1 + FC2V + FC2H)を反転させたフィルター。$ f_{L} $の成分を取り出すのに使います。\n",
-        "\n",
-        "例\n",
-        "\\begin{equation}\n",
-        "F_L = 1 - F_{C1} - F_{C2V} - F_{C2H}\n",
-        "\\end{equation}\n",
-        "\n",
-        "\n",
-        "これらを使えば、\n",
-        "\n",
-        "\\begin{align}\n",
-        "f_{C1} & = F_{C1}  \\left ( f_{Bayer} \\right ) e^{- i \\pi \\left ( x + y \\right )} \\\\\\\n",
-        "f_{C2V} & = F_{C2V} \\left ( f_{Bayer} \\right )  e^{-i \\pi y} \\\\\\\n",
-        "f_{C2H} & = F_{C2H} \\left ( f_{Bayer} \\right )  e^{-i \\pi x} \\\\\\\n",
-        "f_{C2} & = \\left ( f_{C2V} + f_{C2H} \\right ) / 2 \\\\\\\n",
-        "f_L & = F_L \\left ( f_{Bayer} \\right ) \n",
-        "\\end{align}\n",
-        "\n",
-        "となって $f_L$ 、 $f_{C1}$ 、 $f_{C2}$ の近似が計算でき、そこから $f_R$ 、 $f_G$ 、 $f_B$ が求められるはずです。\n",
-        "やってみましょう。"
+        "_この項は、画像処理の理論的背景に興味がない方は読み飛ばして構いません。_\n"
       ]
     },
     {
@@ -717,7 +599,7 @@
         "plt.title(u\"トーンカーブ補正\")\n",
         "plt.show()"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -772,7 +654,7 @@
         "plt.title(u\"高度なデモザイク、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -969,7 +851,7 @@
         "plt.title(u\"高度なデモザイク最終画像、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1005,21 +887,6 @@
         "### まとめ\n",
         "\n",
         "今回は高度なデモザイク処理をとりあげました。\n",
-        "\n",
-        "参照した論文[^1]ではさらに、一部のチャンネルを混ぜ合わせるときに各画素毎に重み計算を行うという適合処理的アルゴリズムを扱っています。今回は割愛しましたが、興味のある方は試されてはいかがでしょうか[^2]？\n",
-        "\n",
-        "[^1]: Frequency-Domain Methods for Demosaicking of Bayer-Sampled Color Images, Eric Dubois, IEEE Signal Processing Letters, Dec. 2005\n",
-        "\n",
-        "[^2]: 論文の著者グループが[WebにてMatlabのサンプルプログラムを配布しています](http://www.site.uottawa.ca/~edubois/SingleSensorImaging/Bayer_structure/)。また、今回のスクリプトを少し書き換えれば実現できることは確認済みです。\n",
-        "\n",
-        "また、このアルゴリズムが発表されたのがすでに１３年前であり、これまでにさらにさまざまなアルゴリズムが提案されており、現在も進歩をつづけています[^3]。\n",
-        "たとえば、最近の流行はデモザイク処理にディープラーニングを使う手法です[^4]。\n",
-        "\n",
-        "[^3]: たとえば高機能なRAW現像ソフトウェアRawTherapeeではさまざまなアルゴリズムを実装しているようです。https://rawpedia.rawtherapee.com/Demosaicing/jp\n",
-        "\n",
-        "[^4]: https://arxiv.org/abs/1802.03769:title \n",
-        "\n",
-        "こういった事情を考慮にいれても、今回紹介した手法はシンプルな割には高画質の出力が得られる良いアルゴリズムだと思います。\n",
         "\n",
         "次は[ミラーレスカメラ（ソニーα7-III)のRAW現像](https://bit.ly/raw_chap_6_3)です。\n",
         "\n"
