--- a/camera_raw_chapter_6_3.ipynb
+++ b/camera_raw_chapter_6_3.ipynb
@@ -35,9 +35,7 @@
         "\n",
         "この節ではこれまで扱ってきた処理を使ってソニーα7-IIIのRAW画像を現像してみます。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-        "\n",
-        "http://bit.ly/raw_chap_6_3"
+        "[目次ページに戻る](http://bit.ly/raw_toc)\n"
       ]
     },
     {
@@ -170,7 +168,7 @@
       "source": [
         "! exiftool sample.ARW"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +456,7 @@
         "plt.axis('off')\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -498,7 +496,7 @@
       "source": [
         "print(raw.sizes)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,7 +533,7 @@
       "source": [
         "print(raw.raw_pattern)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +579,7 @@
       "source": [
         "print(raw.camera_whitebalance)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,7 +695,7 @@
         "plt.title(u\"最終画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
