--- a/camera_raw_appendix.ipynb
+++ b/camera_raw_appendix.ipynb
@@ -45,9 +45,7 @@
         "\n",
         "ここではGoogle Colabの簡単な使い方とエラーが出た場合の対処法を解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-        "\n",
-        "http://bit.ly/raw_appendix_1"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
