--- a/camera_raw_appendix_2.ipynb
+++ b/camera_raw_appendix_2.ipynb
@@ -35,9 +35,7 @@
         "\n",
         "ここではRAW画像の撮影方法を簡単に説明します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-        "\n",
-        "http://bit.ly/raw_appendix_2"
+        "[目次ページに戻る](http://bit.ly/raw_toc)\n"
       ]
     },
     {
